--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>Farmer Maths</title>
-  </head>
-  <body>
-    <header>
-	    <h1>Farmer Mathematics</h1>
-    </header>
-
-    <main>
-	    <p>Hi boys, welcome to Farmer Maths!</p>
-    </main>
-    <footer></footer>
-  </body>
+<html>
+<head>
+	<title>Farmer Maths</title>
+</head>
+<body>
+	<h1>Farmer Mathematics</h1>
+	<p>Hi boys, welcome to my website!</p>
+</body>
 </html>
