--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 	<title>Farmer Maths</title>
 </head>
 <body>
-	<h1>Farmer Mathematics</h1>
-	<p>Hi boys, welcome to my website!</p>
+<header>
+	<center>
+		<h1>Farmer Mathematics</h1>
+	</center>
+</header>
+	<center>
+		<p>Hi boys, welcome to my website!</p>
+	</center>
 </body>
 </html>
