--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
 	</center>
 </header>
 	<center>
-		<p>Hi boys, welcome to my website!</p>
+		<br><br>
+		Hi boys, welcome to <a href="index.html">Farmer Maths!</a>
+		I am The Farmer, a very sweaty mathematician of the forest.
+		Here you may find a variety of maths-related resources I have created.
+		<br><br>
+		<h3>OCR Farmer Pure Mathematics</h3>
+		<a href="./fm/complex1.pdf">Complex Numbers I</a>
+		<br>
 	</center>
 </body>
 </html>
