--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<br><br>
 		<h4>OCR Farmer Pure Mathematics</h4>
 		<a href="./fm/complex1.pdf">Complex Numbers I</a><br>
-		<a>Matrices I [COMING SOON]</a>
+		<a href="./fm/matrix1.pdf">Matrices: Matrix Algebra I</a>
 		<br>
 	</center>
 </body>
