--- a/index.html
+++ b/index.html
@@ -28,11 +28,19 @@
 		<br>
 		I am The Farmer, a very sweaty mathematician of the forest.
 		<br>
-		Here you may find a variety of maths-related resources I have created.
+		Here you may find a variety of maths-related resources I have created out of my love for Mathematics.
+		<br>
+		These include explanations and problems covering the important points of topics.
+		<br>
+		These should help quite a bit with revision.
+		<br>
+		Enjoy!
 		<br><br>
 		<h4>OCR Farmer Pure Mathematics</h4>
 		<a href="./fm/complex1.pdf">Complex Numbers I</a><br>
-		<a href="./fm/matrix1.pdf">Matrices: Matrix Algebra I</a>
+		<a href="./fm/matrix1.pdf">Matrices: Matrix Algebra I</a><br>
+		<a href="./fm/matrix2.pdf">Matrices: Matrix Transformations</a><br>
+		<hp>Coming Soon: Further Polynomials</p>
 		<br>
 	</center>
 </body>
