guess who's back

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<br><br>
 		Hi boys, welcome to <a href="index.html">Farmer Maths!</a>
 		<br>
-		I am The Farmer, a very sweaty mathematician of the forest.
+		I am The Farmer, a very sweaty mathematician of the great forest.
 		<br>
 		Here you may find a variety of maths-related resources I have created out of my love for Mathematics.
 		<br>
@@ -40,7 +40,8 @@
 		<a href="./fm/complex1.pdf">Complex Numbers I</a><br>
 		<a href="./fm/matrix1.pdf">Matrices: Matrix Algebra I</a><br>
 		<a href="./fm/matrix2.pdf">Matrices: Matrix Transformations</a><br>
-		<hp>Coming Soon: Further Polynomials</p>
+		<a href="./fm/roots.pdf">Polynomial Root Manipulation</a><br>
+		<hp>Coming Soon: Mathematical Induction</p>
 		<br>
 	</center>
 </body>
