--- a/index.html
+++ b/index.html
@@ -36,13 +36,35 @@
 		<br>
 		Enjoy!
 		<br><br>
-		<h4>OCR Farmer Pure Mathematics</h4>
-		<a href="./fm/complex1.pdf">Complex Numbers I</a><br>
-		<a href="./fm/matrix1.pdf">Matrices: Matrix Algebra I</a><br>
-		<a href="./fm/matrix2.pdf">Matrices: Matrix Transformations</a><br>
-		<a href="./fm/roots.pdf">Polynomial Root Manipulation</a><br>
-		<hp>Coming Soon: Mathematical Induction</p>
-		<br>
+
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4" style="padding:30px;">
+					<center>
+						<h4>OCR Farmer Statistics</h4>
+						<a href="./fm/stats/geometric_distribution.pdf">The Geometric Distribution</a>
+						<p>Coming Soon: The Poisson Distribution</p>
+					</center>
+				</div>
+				<div class="col-sm-4" style="padding:30px;">
+					<center>
+
+						<h4>OCR Farmer Pure</h4>
+						<a href="./fm/pure/complex1.pdf">Complex Numbers I</a><br>
+						<a href="./fm/pure/matrix1.pdf">Matrices: Matrix Algebra I</a><br>
+						<a href="./fm/pure/matrix2.pdf">Matrices: Matrix Transformations</a><br>
+						<a href="./fm/pure/roots.pdf">Polynomial Root Manipulation</a><br>
+						<p>Coming Soon: Mathematical Induction</p>
+					</center>
+				</div>
+				<div class="col-sm-4" style="padding:30px;">
+					<center>
+						<h4>OCR Farmer Mechanics</h4>
+						<p>Coming Soon!</p>
+					</center>
+				</div>
+			</div>
+		</div>
 	</center>
 </body>
 </html>
