--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		<br>
 		Enjoy!
 		<br><br>
+		<h2>FARMER OLYMPIAD 2022 ROUND 1 COMING SOON...</h2>
 
 		<div class="container">
 			<div class="row">
