--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
 		<br>
 		Enjoy!
 		<br><br>
-		<h2>FARMER OLYMPIAD 2022 ROUND 1 COMING SOON...</h2>
+		<h3>Farmer Olympiad 2022</h3>
+		<br>
+		<a href="./olympiad/2022/2022round1.pdf">Farmer Olympiad 2022 Round I Question Paper</a>
+		<br>
+		<a href="./olympiad/2022/2022round1ans.pdf">Farmer Olympiad 2022 Round I Mark Scheme</a>
 
 		<div class="container">
 			<div class="row">
