--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
 					<center>
 						<h4>OCR Farmer Statistics</h4>
 						<a href="./fm/stats/geometric_distribution.pdf">The Geometric Distribution</a>
-						<p>Coming Soon: The Poisson Distribution</p>
 					</center>
 				</div>
 				<div class="col-sm-4" style="padding:30px;">
@@ -59,13 +58,12 @@
 						<a href="./fm/pure/matrix1.pdf">Matrices: Matrix Algebra I</a><br>
 						<a href="./fm/pure/matrix2.pdf">Matrices: Matrix Transformations</a><br>
 						<a href="./fm/pure/roots.pdf">Polynomial Root Manipulation</a><br>
-						<p>Coming Soon: Mathematical Induction</p>
 					</center>
 				</div>
 				<div class="col-sm-4" style="padding:30px;">
 					<center>
 						<h4>OCR Farmer Mechanics</h4>
-						<p>Coming Soon!</p>
+						<a href="./fm/mech/circularmotion1.pdf">Circular Motion I</a><br>
 					</center>
 				</div>
 			</div>
