redid some things

--- a/index.html
+++ b/index.html
@@ -18,56 +18,22 @@
 <body>
 <header>
 	<center>
-		<h1><u>Farmer Mathematics</u></h1>
-		<h2 class="useless">Wahoo!</h2>
+		<h1><u>Farmer Maths</u></h1>
 	</center>
 </header>
 	<center>
-		<br><br>
-		Hi boys, welcome to <a href="index.html">Farmer Maths!</a>
-		<br>
-		I am The Farmer, a very sweaty mathematician of the great forest.
-		<br>
-		Here you may find a variety of maths-related resources I have created out of my love for Mathematics.
-		<br>
-		These include explanations and problems covering the important points of topics.
-		<br>
-		These should help quite a bit with revision.
-		<br>
-		Enjoy!
-		<br><br>
-		<h3>Farmer Olympiad 2022</h3>
-		<br>
-		<a href="./olympiad/2022/2022round1.pdf">Farmer Olympiad 2022 Round I Question Paper</a>
-		<br>
-		<a href="./olympiad/2022/2022round1ans.pdf">Farmer Olympiad 2022 Round I Mark Scheme</a>
+		<p>The <b>Farmer Maths</b> project is a collection of problems written by me, related to Pure and Applied Mathematics and meant to challenge the mind as well as entertain.</p>
+		<p>The <b>Farmer Olympiad</b> is a series of exam papers I have written that are composed of such questions.</p>
+		<hr/>
+		<h2>Farmer Olympiad 2022</h2>
+		<a href="./olympiad/2022/round1.pdf">Round 1 QP</a><br/>
+		<a href="./olympiad/2022/round1_ms.pdf">Round 1 MS</a>
+		<br/>
+		<a href="./olympiad/2022/round2.pdf">Round 2 QP</a><br/>
+		<a href="./olympiad/2022/round2_ms.pdf">Round 2 MS</a>
+		<br/>
+		<a href="./olympiad/2022/round3.pdf">Round 3 QP</a><br/>
 
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-4" style="padding:30px;">
-					<center>
-						<h4>OCR Farmer Statistics</h4>
-						<a href="./fm/stats/geometric_distribution.pdf">The Geometric Distribution</a>
-					</center>
-				</div>
-				<div class="col-sm-4" style="padding:30px;">
-					<center>
-
-						<h4>OCR Farmer Pure</h4>
-						<a href="./fm/pure/complex1.pdf">Complex Numbers I</a><br>
-						<a href="./fm/pure/matrix1.pdf">Matrices: Matrix Algebra I</a><br>
-						<a href="./fm/pure/matrix2.pdf">Matrices: Matrix Transformations</a><br>
-						<a href="./fm/pure/roots.pdf">Polynomial Root Manipulation</a><br>
-					</center>
-				</div>
-				<div class="col-sm-4" style="padding:30px;">
-					<center>
-						<h4>OCR Farmer Mechanics</h4>
-						<a href="./fm/mech/circularmotion1.pdf">Circular Motion I</a><br>
-					</center>
-				</div>
-			</div>
-		</div>
 	</center>
 </body>
 </html>
