--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
 		<p>The <b>Farmer Olympiad</b> is a series of exam papers I have written that are composed of such questions.</p>
 		<hr/>
 		<h2>Farmer Olympiad 2022</h2>
-		<a href="./olympiad/2022/round1.pdf">Round 1 QP</a><br/>
-		<a href="./olympiad/2022/round1_ms.pdf">Round 1 MS</a>
-		<br/>
-		<a href="./olympiad/2022/round2.pdf">Round 2 QP</a><br/>
-		<a href="./olympiad/2022/round2_ms.pdf">Round 2 MS</a>
-		<br/>
-		<a href="./olympiad/2022/round3.pdf">Round 3 QP</a><br/>
+		<a href="./olympiad/2022/round1.pdf">Round 1 Questions</a><br/>
+		<a href="./olympiad/2022/round1_ms.pdf">Round 1 Answers</a>
+		<br/><br/>
+		<a href="./olympiad/2022/round2.pdf">Round 2 Questions</a><br/>
+		<a href="./olympiad/2022/round2_ms.pdf">Round 2 Answers</a>
+		<br/><br/>
+		<a href="./olympiad/2022/round3.pdf">Round 3 Questions</a><br/>
+		<a href="./olympiad/2022/round3_ms.pdf">Round 3 Answers</a>
 
 	</center>
 </body>
