--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
 	<br/>
 </header>
 	<center>
-		<p>The <b>Farmer Maths</b> project is a collection of problems written by me, related to Pure and Applied Mathematics and meant to challenge the mind as well as entertain.</p>
-		<p>The <b>Farmer Olympiad</b> is a series of exam papers I have written that are composed of such questions.</p>
 		<br/>
 		<hr/>
 		<a href="./olympiad/round4.pdf">NEW: Farmer Olympiad 4</a><br/>
-		<p>Published on 9th of December 2023.</p>
+		<p>Published on the 9th of December 2023.</p>
 		<p>Mark scheme publication shall follow soon.<p>
 		<hr/>
 		<a href="./olympiad/round3.pdf">Farmer Olympiad 3</a><br/>
