--- a/index.html
+++ b/index.html
@@ -20,25 +20,37 @@
 	<br/><br/>
 	<center>
 		<h1><u>Farmer Maths</u></h1>
+
+		<p>Welcome! <b>Farmer Maths</b> is a collection of problems in pure and applied mathematics written by me.</p>
 	</center>
-	<br/>
 </header>
 	<center>
-		<br/>
-		<hr/>
+		<br/><hr/>
 		<a href="./olympiad/round4.pdf">NEW: Farmer Olympiad 4</a><br/>
 		<p>Published on the 9th of December 2023.</p>
 		<p>Mark scheme publication shall follow soon.<p>
 		<hr/>
 		<a href="./olympiad/round3.pdf">Farmer Olympiad 3</a><br/>
 		<a href="./olympiad/round3_ms.pdf">Answers</a>
-		<br/><br/>
+		<hr/>
 		<a href="./olympiad/round2.pdf">Farmer Olympiad 2</a><br/>
 		<a href="./olympiad/round2_ms.pdf">Answers</a>
-		<br/><br/>
+		<hr/>
 		<a href="./olympiad/round1.pdf">Farmer Olympiad 1</a><br/>
 		<a href="./olympiad/round1_ms.pdf">Answers</a>
-
+		<hr/>
+		<a href="./fm/mech/circularmotion1.pdf">Circular Motion 1</a><br>
+		<hr/>
+		<a href="./fm/pure/complex1.pdf">Complex Numbers 1</a><br>
+		<hr/>
+		<a href="./fm/pure/matrix2.pdf">Matrices 2</a><br>
+		<hr/>
+		<a href="./fm/pure/matrix1.pdf">Matrices 1</a><br>
+		<hr/>
+		<a href="./fm/pure/roots.pdf">Roots of Polynomials</a><br>
+		<hr/>
+		<a href="./fm/stats/geometric_distribution.pdf">The Geometric Distribution</a><br>
+		<hr/>
 	</center>
 </body>
 </html>
