--- a/index.html
+++ b/index.html
@@ -24,33 +24,52 @@
 		<p>Welcome! <b>Farmer Maths</b> is a collection of problems in pure and applied mathematics written by me.</p>
 	</center>
 </header>
-	<center>
-		<br/><hr/>
-		<a href="./olympiad/round4.pdf">NEW: Farmer Olympiad 4</a><br/>
-		<p>Published on the 9th of December 2023.</p>
-		<p>Mark scheme publication shall follow soon.<p>
-		<hr/>
-		<a href="./olympiad/round3.pdf">Farmer Olympiad 3</a><br/>
-		<a href="./olympiad/round3_ms.pdf">Answers</a>
-		<hr/>
-		<a href="./olympiad/round2.pdf">Farmer Olympiad 2</a><br/>
-		<a href="./olympiad/round2_ms.pdf">Answers</a>
-		<hr/>
-		<a href="./olympiad/round1.pdf">Farmer Olympiad 1</a><br/>
-		<a href="./olympiad/round1_ms.pdf">Answers</a>
-		<hr/>
-		<a href="./fm/mech/circularmotion1.pdf">Circular Motion 1</a><br>
-		<hr/>
-		<a href="./fm/pure/complex1.pdf">Complex Numbers 1</a><br>
-		<hr/>
-		<a href="./fm/pure/matrix2.pdf">Matrices 2</a><br>
-		<hr/>
-		<a href="./fm/pure/matrix1.pdf">Matrices 1</a><br>
-		<hr/>
-		<a href="./fm/pure/roots.pdf">Roots of Polynomials</a><br>
-		<hr/>
-		<a href="./fm/stats/geometric_distribution.pdf">The Geometric Distribution</a><br>
-		<hr/>
-	</center>
+
+	<div class="container">
+		<div class="row">
+		  <div class="col-sm-4" style="padding:24px;">
+			  <center>
+				<h3><u>Farmer Olympiad</u></h3><br/>
+				<a href="./olympiad/round4.pdf">Farmer Olympiad 4</a>
+				<br/>
+				<p>Answers coming soon...</p>
+				<a href="./olympiad/round3.pdf">Farmer Olympiad 3</a>
+				<br/>
+				<a href="./olympiad/round3_ms.pdf">Answers</a>
+				<br/><br/>
+				<a href="./olympiad/round2.pdf">Farmer Olympiad 2</a>
+				<br/>
+				<a href="./olympiad/round2_ms.pdf">Answers</a>
+				<br/><br/>
+				<a href="./olympiad/round1.pdf">Farmer Olympiad 1</a>
+				<br/>
+				<a href="./olympiad/round1_ms.pdf">Answers</a>
+			  </center>
+		  </div>
+		  <div class="col-sm-4" style="padding:24px;">
+			  <center>
+				<h3><u>Problem Sets</u></h3><br/>
+				<a href="./fm/mech/circularmotion1.pdf">Circular Motion 1</a><br>
+				<br/>
+				<a href="./fm/pure/complex1.pdf">Complex Numbers 1</a><br>
+				<br/>
+				<a href="./fm/pure/matrix2.pdf">Matrices 2</a><br>
+				<br/>
+				<a href="./fm/pure/matrix1.pdf">Matrices 1</a><br>
+				<br/>
+				<a href="./fm/pure/roots.pdf">Roots of Polynomials</a><br>
+				<br/>
+				<a href="./fm/stats/geometric_distribution.pdf">The Geometric Distribution</a><br>
+				<br/>
+			  </center>
+		  </div>
+		  <div class="col-sm-4" style="padding:24px;">
+			  <center>
+				<h3><u>Fun</u></h3><br/>
+				<a href="./other/clicker.html">Prime Clicker</a><br>
+			  </center>
+		  </div>
+		</div>
+	  </div>
 </body>
 </html>
