--- a/other/clicker.html
+++ b/other/clicker.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Farmer Clicker</title>
+	<title>Prime Clicker</title>
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
           tex2jax: {
@@ -29,16 +29,24 @@
 	<link rel="stylesheet" href="clicker.css">
 </head>
 <body>
+    <header style="background-color: rgb(0, 0, 0); color:rgb(255, 255, 255) !important; padding-left:10px; padding-top:10px;">
+        <h4>Farmer Maths</h4>
+        <center>
+            <h1>Prime Clicker</h1>
+
+            <a href="../index.html">Main Page</a>
+        </center>
+        <br/>
+    </header>
+    
     <center>
-        <h1><u>Farmer Maths: Prime Clicker</u></h1>
-        <a href="../index.html">Back to main page...</a>
-        <br/><br/>
+        <br/>
         <p id="highscore">n<sub>max</sub> = 0</p>
         <br/>
         <h1 id="score">n = 0</h1>
         <br/>
         <p>Is n prime?</p>
-        <button type="button" class="btn btn-success" onclick="yes();">YES</button> <span/> <button type="button" class="btn btn-success" onclick="no();">NO</button>
+        <button type="button" class="btn btn-dark" onclick="yes();">YES</button> <span/> <button type="button" class="btn btn-dark" onclick="no();">NO</button>
     
         <br/><br/>
 
