--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<p>Welcome! <b>Farmer Maths</b> is a collection of problems in pure and applied mathematics written by me.</p>
 	<br/>
 	<div style="padding:40px; background-color: rgb(255, 255, 255); max-width: 720px; border-style: solid;">
-	<p>Where $\sigma$ and $\mu$ are constants, and for all $k \in \mathbb{Z}$ $$X_k \sim \mathcal{N}(\mu, \sin(\frac{k \pi}{3}) \sigma^2)$$ Define a random variable $Y$ by $$Y = \sum_{k=0}^{50} X_k.$$
+	<p>Where $\sigma$ and $\mu$ are constants, and for all $k \in \mathbb{Z}$ $$X_k \sim \mathcal{N} \left( \mu, \sin(\frac{k \pi}{3}) \sigma^2 \right)$$ Define a random variable $Y$ by $$Y = \sum_{k=0}^{50} X_k.$$
 	Find the exact value of $z$ such that $\mathbb{P}(Y \leq 100 \mu) = \Phi(z)$.</p>
 	</div>
 	<br/>
